# MiniRysGazebo

./: README.md
dev_ws/src/minirys_sim/: CMakeLists.txt  README.txt
dev_ws/src/minirys_sim/APP/: App.py  watch_and_compile.py
dev_ws/src/minirys_sim/APP/robot_colored/: image_generator.py
dev_ws/src/minirys_sim/auxiliary_programs/data_ploter/: AngularPose_data_ploter.py  Odometry_data_ploter.py
dev_ws/src/minirys_sim/config/: color_list.txt  drive_config.xml  launch_config.xml  robot_parameters.xml  rviz2_config.rviz  world_list.xml
dev_ws/src/minirys_sim/config/robots/: robot1_config.xml  robot2_config.xml  robot3_config.xml
dev_ws/src/minirys_sim/config/robots/robots_archive/: 20240424074628_robot1.xml
dev_ws/src/minirys_sim/description/: README.txt  camera.xacro  chassis.xacro  diff_control.xacro  imu.xacro  label.xacro  macros.xacro  materials.xacro  model.config  robot.urdf.xacro  ros2_control_gazebo.xacro  tof_sensors.xacro  variables.xacro  wheels.xacro
dev_ws/src/minirys_sim/description/materials/scripts/: colors.material  textures.material
dev_ws/src/minirys_sim/description/meshes/: INERTIA.txt
dev_ws/src/minirys_sim/description/meshes/chassis/: PCB_and_stepper.STL  (+3 more)
dev_ws/src/minirys_sim/launch/: command_groups.launch.py  delete_robot.launch.py  main.launch.py  menager.launch.py  robot.launch.py
dev_ws/src/minirys_sim/scripts/: PID.txt  cmd_translator_node.py  delete_robot.py  monitor_node.py  odom_translator_node.py  relay_node.py  robot_menager_node.py  spawn_entity  spawn_entity.py
dev_ws/src/minirys_sim/srv/: OdomService.srv
(+390 files in other folders)
